force-app/main/default/objects/amazonconnect__AC_CtiScript__c/fields/amazonconnect__Active__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>