force-app/main/default/objects/amazonconnect__AC_CtiScript__c/fields/amazonconnect__DebuggerBreakpoint__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__DebuggerBreakpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting controls browser console debug output.</description>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>