force-app/main/default/objects/amazonconnect__AC_CtiScript__c/fields/amazonconnect__Event__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>amazonconnect__Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACCtiScriptEvent</valueSetName>
    </valueSet>
</CustomField>