force-app/main/default/objects/amazonconnect__AC_CtiScript__c/fields/amazonconnect__Source__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACCtiScriptSource</valueSetName>
    </valueSet>
</CustomField>